--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "puppeteer": "^22.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "safer-buffer": "^2.1.1",
